samples/_failures_safe/1761715389_98a22f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7b22d72.c: In function ‘main’:
./samples/SAFE/__tmp_f7b22d72.c:146:29: error: expected ‘;’ at end of input
  146 |     event_ids[2] = add_event
      |                             ^
      |                             ;
./samples/SAFE/__tmp_f7b22d72.c:146:5: error: expected declaration or statement at end of input
  146 |     event_ids[2] = add_event
      |     ^~~~~~~~~
